# BabylonXBOX

./: CMakeLists.txt
Dependencies/: CMakeLists.txt
Game/: CMakeLists.txt  Package.appxmanifest
Game/Scripts/: experience.js
Game/Source/: App.cpp  App.h
